--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 
-db.jdbc_url=jdbc:mysql://http
-db.username=root
-db.password=Love50146
-#db.driver=
+db.jdbc_url=jdbc:mysql://1.169.65.87:33306/shopmall?UseUnicode=true&characterEncoding=utf-8
+db.username=shopmall
+db.password=123456
